CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/Arbol_Comunicaciones__mdt.object-meta.xml
<CustomObject>
    <label>Árbol Comunicaciones</label>
    <pluralLabel>Árbol Comunicaciones</pluralLabel>
</CustomObject>