CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion__c</fullName>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cambio de Taller Asignado</fullName>
                <default>true</default>
                <label>Cambio de Taller Asignado</label>
            </value>
            <value>
                <fullName>Cambio de Liquidador Asignado</fullName>
            </value>
            <value>
                <fullName>Parcial</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>Vale Vista</fullName>
            </value>
            <value>
                <fullName>No Pago Pensión</fullName>
            </value>
            <value>
                <fullName>No Pago Asignación Familiar</fullName>
            </value>
            <value>
                <fullName>Descuento Caja Compensación</fullName>
            </value>
            <value>
                <fullName>Descuento Institución Salud</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Prima Proyectada</fullName>
            </value>
            <value>
                <fullName>Vía de Pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>