CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Estado_del_caso__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_caso__c</fullName>
    <label>Estado del caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>