CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Linea_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_negocio__c</fullName>
    <label>Línea de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generales</fullName>
                <default>true</default>
                <label>Generales</label>
            </value>
            <value>
                <fullName>Rentas Vitalicias</fullName>
            </value>
            <value>
                <fullName>Transversal</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>