CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Numero_Linea__c.field-meta.xml
<CustomField>
    <fullName>Numero_Linea__c</fullName>
    <label>Número Linea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>