CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Plantilla__c.field-meta.xml
<CustomField>
    <fullName>Plantilla__c</fullName>
    <label>Plantilla</label>
    <length>15</length>
    <type>Text</type>
</CustomField>