CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Subestado_del_caso__c.field-meta.xml
<CustomField>
    <fullName>Subestado_del_caso__c</fullName>
    <label>Subestado del caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin subestado</fullName>
                <default>true</default>
                <label>Sin subestado</label>
            </value>
            <value>
                <fullName>Solucionado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Desistido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>