CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atención del Tercero Afectado en Siniestro</fullName>
                <default>true</default>
                <label>Atención del Tercero Afectado en Siniestro</label>
            </value>
            <value>
                <fullName>Atención de Siniestro de Pérdida Parcial</fullName>
            </value>
            <value>
                <fullName>Atención de Siniestro de Pérdida Total</fullName>
            </value>
            <value>
                <fullName>Cambio Dato Contacto</fullName>
            </value>
            <value>
                <fullName>Descuento</fullName>
            </value>
            <value>
                <fullName>Modificación de Póliza</fullName>
            </value>
            <value>
                <fullName>Reclamos Pólizas</fullName>
            </value>
            <value>
                <fullName>Reclamos Siniestros</fullName>
            </value>
            <value>
                <fullName>Rescate</fullName>
            </value>
            <value>
                <fullName>Servicio de Asistencia Vehicular</fullName>
            </value>
            <value>
                <fullName>Sobre Denuncio y Asignación Siniestro</fullName>
            </value>
            <value>
                <fullName>Término de Póliza</fullName>
            </value>
            <value>
                <fullName>Traspaso</fullName>
            </value>
            <value>
                <fullName>Asociadas a Producción Grales</fullName>
            </value>
            <value>
                <fullName>Modificación No Efectuada</fullName>
            </value>
            <value>
                <fullName>No Gestión Beneficio Estatal</fullName>
            </value>
            <value>
                <fullName>No Pago Pensión</fullName>
            </value>
            <value>
                <fullName>Asociadas a Producción S. Vida</fullName>
            </value>
            <value>
                <fullName>Reclamos Siniestros S. Vida</fullName>
            </value>
            <value>
                <fullName>Asociadas a Producción S. Generales</fullName>
            </value>
            <value>
                <fullName>21 dias</fullName>
            </value>
            <value>
                <fullName>Traspaso APV</fullName>
            </value>
            <value>
                <fullName>Devolución Primas</fullName>
            </value>
            <value>
                <fullName>Suspensión de Pagos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>