CNSDEVCOLECT/force-app/main/default/objects/Arbol_Comunicaciones__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consulta</fullName>
                <default>true</default>
                <label>Consulta</label>
            </value>
            <value>
                <fullName>Solicitud</fullName>
            </value>
            <value>
                <fullName>Reclamo</fullName>
            </value>
            <value>
                <fullName>21 dias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>